Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12262

Qt does not build with qt_namespace on macos

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 4.7.0
    • 4.7.0
    • None
    • None
    • MacOS 10.6.4
    • macOS
    • b0998a44a5dc384a6cf65c1d5910cb3dd40620cf

    Description

      Building Qt with a namespace fails on MacOS.

      Revision: dc37f4ff3439e44df65d24aea4354c80d2a02293

      Build failure:

      g++ -c -include .pch/debug-shared/QtNetwork_debug -pipe -Xarch_x86_64 -mmacosx-version-min=10.5 -fconstant-cfstrings -g -gdwarf-2 -arch x86_64 -Xarch_x86_64 -mmacosx-version-min=10.5 -fvisibility=hidden -fvisibility-inlines-hidden -Wall -W -fPIC -DQT_SHARED -DQT_BUILD_NETWORK_LIB -DQT_NO_USING_NAMESPACE -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_FAST_OPERATOR_PLUS -DQT_USE_FAST_CONCATENATION -DQT_CORE_LIB -DQT_NAMESPACE=QtNs -DQT_NAMESPACE_MAC_CRC=2801481050 -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I../../mkspecs/macx-g++ -I. -I../../include/QtCore -I../../include -I../../include/QtNetwork -I.rcc/debug-shared -Ikernel -I.moc/debug-shared -F/data/git/qt/4.7-20100719125308/lib -o .obj/debug-shared/qsslsocket_openssl.o ssl/qsslsocket_openssl.cpp
      ssl/qsslsocket_openssl.cpp:64: error: 'PtrSecCertificateGetData' does not name a type
      ssl/qsslsocket_openssl.cpp:65: error: 'PtrSecTrustSettingsCopyCertificates' does not name a type
      ssl/qsslsocket_openssl.cpp:66: error: 'PtrSecTrustCopyAnchorCertificates' does not name a type

      Configure command-line:
      ./configure -prefix /data/git/qt/4.7-current -cocoa -arch x86_64 -nomake examples -nomake demos -no-qt3support -opensource -qtnamespace QtNs

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            cduclos Carlos Duclos (Inactive)
            erikv Erik Verbruggen
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes