Qt does not build with qt_namespace on macos

The problem was that the QT_BEGIN_NAMESPACE was in the wrong place.
I moved it 10 lines before and the problem is gone.

Task-number: QTBUG-12262
Reviewed-by: Prasanth
(cherry picked from commit b0998a44a5dc384a6cf65c1d5910cb3dd40620cf)